# video_to_notes

./: README.md  pyproject.toml
src/video_to_notes/: app.py
